<resources>
    <string name="app_name">Meeting Miage App</string>
    <string name="meetingCreationTitle">CREATE A MEETING</string>
    <string name="locationLabel">SELECT A LOCATION</string>
    <string name="currentDateHint">Current Date</string>
    <string name="currentTimeHint">Current Time</string>
    <string name="addContactLabel">ADD CONTACT</string>
    <string name="addPhoneLabel">ADD PHONE NUMBER</string>
    <string name="locationPicDesc">Location picture</string>
    <string name="contactPicDesc">Contact picture</string>
    <string name="timePicDesc">Time picture</string>
    <string name="sendMeeting">Send meeting request</string>
    <string name="receptionTitle">SUGGESTED MEETING DATE</string>
    <string name="accept">ACCEPT</string>
    <string name="refuse">REFUSE</string>
</resources>
