<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeetingCreationActivity">

    <TextView
        android:id="@+id/tvCreateMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:text="@string/meetingCreationTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center|top"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@string/locationPicDesc"
                    android:src="@drawable/ic_location" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonLocation"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="start|center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        android:text="@string/locationLabel"
                        android:textColor="@color/colorPrimary"
                        android:onClick="setLocation"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="top|center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@string/timePicDesc"
                    android:src="@drawable/ic_time" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/buttonStartDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:fontFamily="sans-serif-light"
                            android:gravity="start|center_vertical"
                            android:padding="16dp"
                            android:text="@string/currentDateHint"
                            android:textAllCaps="false"
                            android:onClick="pickStartDate"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/buttonStartTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:fontFamily="sans-serif-light"
                            android:gravity="end|center_vertical"
                            android:padding="16dp"
                            android:text="@string/currentTimeHint"
                            android:textAllCaps="false"
                            android:onClick="pickStartTime"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/buttonEndDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:fontFamily="sans-serif-light"
                            android:gravity="start|center_vertical"
                            android:padding="16dp"
                            android:text="@string/currentDateHint"
                            android:textAllCaps="false"
                            android:textSize="16sp"
                            android:visibility="invisible" />

                        <Button
                            android:id="@+id/buttonEndTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?android:attr/selectableItemBackground"
                            android:fontFamily="sans-serif-light"
                            android:gravity="end|center_vertical"
                            android:padding="16dp"
                            android:text="@string/currentTimeHint"
                            android:textAllCaps="false"
                            android:onClick="pickEndTime"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="top|center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@string/contactPicDesc"
                    android:src="@drawable/ic_contact" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/listViewContacts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:dividerHeight="0dp"
                        android:orientation="vertical" />

                    <Button
                        android:id="@+id/buttonAddContact"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="start|center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        android:text="@string/addContactLabel"
                        android:textColor="@color/colorPrimary"
                        android:onClick="addContact"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="top|center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@string/contactPicDesc"
                    android:src="@drawable/ic_contact" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/listViewPhoneNb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:dividerHeight="0dp"
                        android:orientation="vertical" />

                    <Button
                        android:id="@+id/buttonAddPhoneNb"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="start|center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="0dp"
                        android:text="@string/addPhoneLabel"
                        android:textColor="@color/colorPrimary"
                        android:onClick="addPhoneNb"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSendMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="sendMeeting"
        android:text="@string/sendMeeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>